...
            android:textColor="#C8000000"
            android:textSize="40sp"
            android:inputType="text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="367dp"
            android:layout_height="57dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="Username"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="366dp"
            android:layout_height="58dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/login"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:text="Login" />

...
