...
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Leaderboard" />

    <Button
        android:id="@+id/btnArtists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="To Artist Changes" />

</LinearLayout>
